Added '.categories-grp' + styling, made enhancements to styling of '.favourites-grp .fav' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/favourites.html
+++ b/BeginnersPad v2/beginner/favourites.html
@@ -50,7 +50,7 @@
             <p>Menu</p>
             <ul>
                 <li><a href="/beginner/dashboard.html">Dashboard</a></li>
-                <li><a href="/beginner/view-listing.html">Listings</a></li>
+                <li><a href="/view-listings.html">Listings</a></li>
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
@@ -65,6 +65,33 @@
         </div>
     </div>
 
+    <h3 class="section-title">Favourites</h3>
+
+    <!-- Search bar -->
+    <section id="search-bar">
+        <div class="container">
+            <form class="search-bar">
+                <div class="search-bar-grp">
+                    <input type="text" class="search-input" placeholder="search...">
+                    <div class="search-button">
+                        <i class="fas fa-search"></i>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="categories-grp">
+            <div class="category">
+                <button>Listings</button>
+            </div>
+            <div class="category">
+                <button>Listing units</button>
+            </div>
+            <div class="category">
+                <button>Topics</button>
+            </div>
+        </div>
+    </section>
+
     <section id="sectionBookmarks">
         <div class="container">
             <div class="favourites-grp">
@@ -72,7 +99,7 @@
                     <a href="/view-listing-unit.html">
                         <div class="thumb"></div>
                         <div class="details">
-                            <h2 class="txt-single-line">Unit title</h2>
+                            <h3 class="txt-single-line">Unit title</h3>
                             <div class="specs">
                                 <span class="spec">1 bed,</span>
                                 <span class="spec">2 bath,</span>
@@ -89,13 +116,13 @@
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close">x</button>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
                         <div class="thumb"></div>
                         <div class="details">
-                            <h2 class="txt-single-line">Unit title</h2>
+                            <h3 class="txt-single-line">Unit title</h3>
                             <div class="specs">
                                 <span class="spec">1 bed,</span>
                                 <span class="spec">2 bath,</span>
@@ -112,13 +139,13 @@
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close">x</button>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
                     <a href="/view-listing.html">
                         <div class="thumb"></div>
                         <div class="details">
-                            <h2 class="txt-single-line">Listing name</h2>
+                            <h3 class="txt-single-line">Listing name</h3>
                             <div class="location">
                                 <span class="spec">Location,</span>
                                 <span class="spec">Location,</span>
@@ -137,13 +164,13 @@
                             </div>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close">x</button>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
                         <div class="thumb"></div>
                         <div class="details">
-                            <h2 class="txt-single-line">Unit title</h2>
+                            <h3 class="txt-single-line">Unit title</h3>
                             <div class="specs">
                                 <span class="spec">1 bed,</span>
                                 <span class="spec">2 bath,</span>
@@ -160,13 +187,13 @@
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close">x</button>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
                     <a href="/view-listing.html">
                         <div class="thumb"></div>
                         <div class="details">
-                            <h2 class="txt-single-line">Listing name</h2>
+                            <h3 class="txt-single-line">Listing name</h3>
                             <div class="location">
                                 <span class="spec">Location,</span>
                                 <span class="spec">Location,</span>
@@ -185,7 +212,7 @@
                             </div>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close">x</button>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav topic">
                     <a href="../view-topic.html">
@@ -198,7 +225,7 @@
                         asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                         voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     </a>
-                    <button class="btn-link btn-fav-close">x</button>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav topic">
                     <a href="../view-topic.html">
@@ -211,12 +238,158 @@
                         asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                         voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     </a>
-                    <button class="btn-link btn-fav-close">x</button>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                </div>
+                <div class="fav unit">
+                    <a href="/view-listing-unit.html">
+                        <div class="thumb"></div>
+                        <div class="details">
+                            <h3 class="txt-single-line">Unit title</h3>
+                            <div class="specs">
+                                <span class="spec">1 bed,</span>
+                                <span class="spec">2 bath,</span>
+                                <span class="spec">40sq M</span>
+                            </div>
+                            <div class="deposit">
+                                <span class="label">Initial deposit:</span>
+                                <span class="data">not required</span>
+                            </div>
+                            <div class="price">
+                                <span class="label">KES</span>
+                                <span class="data">0.00</span>
+                            </div>
+                            <p class="timestamp">Added 5 hours ago</p>
+                        </div>
+                    </a>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                </div>
+                <div class="fav unit">
+                    <a href="/view-listing-unit.html">
+                        <div class="thumb"></div>
+                        <div class="details">
+                            <h3 class="txt-single-line">Unit title</h3>
+                            <div class="specs">
+                                <span class="spec">1 bed,</span>
+                                <span class="spec">2 bath,</span>
+                                <span class="spec">40sq M</span>
+                            </div>
+                            <div class="deposit">
+                                <span class="label">Initial deposit:</span>
+                                <span class="data">not required</span>
+                            </div>
+                            <div class="price">
+                                <span class="label">KES</span>
+                                <span class="data">0.00</span>
+                            </div>
+                            <p class="timestamp">Added 5 hours ago</p>
+                        </div>
+                    </a>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                </div>
+                <div class="fav listing">
+                    <a href="/view-listing.html">
+                        <div class="thumb"></div>
+                        <div class="details">
+                            <h3 class="txt-single-line">Listing name</h3>
+                            <div class="location">
+                                <span class="spec">Location,</span>
+                                <span class="spec">Location,</span>
+                                <span class="spec">Location</span>
+                            </div>
+                            <p class="timestamp">Added 5 hours ago</p>
+                            <div class="info-rating-grp">
+                                <p class="rating">Rating: 4.0/5</p>
+                                <div class="stars">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                </div>
+                <div class="fav unit">
+                    <a href="/view-listing-unit.html">
+                        <div class="thumb"></div>
+                        <div class="details">
+                            <h3 class="txt-single-line">Unit title</h3>
+                            <div class="specs">
+                                <span class="spec">1 bed,</span>
+                                <span class="spec">2 bath,</span>
+                                <span class="spec">40sq M</span>
+                            </div>
+                            <div class="deposit">
+                                <span class="label">Initial deposit:</span>
+                                <span class="data">not required</span>
+                            </div>
+                            <div class="price">
+                                <span class="label">KES</span>
+                                <span class="data">0.00</span>
+                            </div>
+                            <p class="timestamp">Added 5 hours ago</p>
+                        </div>
+                    </a>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                </div>
+                <div class="fav listing">
+                    <a href="/view-listing.html">
+                        <div class="thumb"></div>
+                        <div class="details">
+                            <h3 class="txt-single-line">Listing name</h3>
+                            <div class="location">
+                                <span class="spec">Location,</span>
+                                <span class="spec">Location,</span>
+                                <span class="spec">Location</span>
+                            </div>
+                            <p class="timestamp">Added 5 hours ago</p>
+                            <div class="info-rating-grp">
+                                <p class="rating">Rating: 4.0/5</p>
+                                <div class="stars">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                </div>
+                <div class="fav topic">
+                    <a href="../view-topic.html">
+                        <h3 class="title-main txt-single-line">Listing a property - Get started</h3>
+                        <p class="text-main txt-six-line">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                        totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
+                        consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
+                        aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
+                        debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
+                        asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
+                        voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
+                    </a>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                </div>
+                <div class="fav topic">
+                    <a href="../view-topic.html">
+                        <h3 class="title-main txt-single-line">Listing a property - Get started</h3>
+                        <p class="text-main txt-six-line">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                        totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
+                        consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
+                        aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
+                        debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
+                        asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
+                        voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
+                    </a>
+                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
                 </div>
             </div>
         </div>
     </section>
     
+    <script src="../js/search-bar-scroll.js"></script>
     <script src="../js/nav-drawer.js"></script>
     <script src="../js/css-base.js"></script>
 </body>
