Added 'waiting-list.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -20,7 +20,7 @@
         <ul id="navMenu" class="nav-menu authed">
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
+                <li><a href="/help.html"><i class="fas fa-question-circle"></i> Help</a></li>
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
