--- a/BeginnersPad v2/beginner/view-listing-unit.html
+++ b/BeginnersPad v2/beginner/view-listing-unit.html
@@ -60,7 +60,7 @@
         <div class="nav-drawer-category">
             <p>Premium</p>
             <ul>
-                <li><a href="#">Waiting list <i class="fas fa-star"></i></a></li>
+                <li><a href="/beginner/waiting-list.html">Waiting list <i class="fas fa-star"></i></a></li>
             </ul>
         </div>
     </div>
