Added 'property-history.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/favourites.html
+++ b/BeginnersPad v2/beginner/favourites.html
@@ -52,7 +52,7 @@
                 <li><a href="/beginner/dashboard.html">Dashboard</a></li>
                 <li><a href="/view-listings.html">Listings</a></li>
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
-                <li><a href="/beginner/favourites.html">Favourites</a></li>
+                <li class="selected"><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
                 <li><a href="/beginner/my-tickets.html">My tickets</a></li>
             </ul>
