Added HTML markup to '/beginner/my-reviews.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listing-reviews.html
+++ b/BeginnersPad v2/view-listing-reviews.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Navbar -->
     <nav>
-        <h1><a href="index.html">Beginners Pad</a></h1>
+        <h1><a href="/index.html">Beginners Pad</a></h1>
         <i id="navToggle" class="fas fa-bars fa-2x toggle"></i>
         <ul id="navMenu" class="nav-menu">
             <div class="badge">
