--- a/BeginnersPad v2/beginner/property-history.html
+++ b/BeginnersPad v2/beginner/property-history.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <nav>
-        <h1><a href="index.html">Beginners Pad</a></h1>
+        <h1><a href="/index.html">Beginners Pad</a></h1>
         <i id="navToggle" class="fas fa-bars fa-2x toggle"></i>
         <ul id="navMenu" class="nav-menu authed">
             <div class="badge">
@@ -52,8 +52,8 @@
                 <li><a href="/beginner/dashboard.html">Dashboard</a></li>
                 <li><a href="/view-listings.html">Listings</a></li>
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
-                <li class="selected"><a href="/beginner/favourites.html">Favourites</a></li>
-                <li><a href="/beginner/property-history.html">Property history</a></li>
+                <li><a href="/beginner/favourites.html">Favourites</a></li>
+                <li class="selected"><a href="/beginner/property-history.html">Property history</a></li>
                 <li><a href="/beginner/my-tickets.html">My tickets</a></li>
             </ul>
         </div>
