--- a/BeginnersPad v2/beginner/waiting-list.html
+++ b/BeginnersPad v2/beginner/waiting-list.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <nav>
-        <h1><a href="index.html">Beginners Pad</a></h1>
+        <h1><a href="/index.html">Beginners Pad</a></h1>
         <i id="navToggle" class="fas fa-bars fa-2x toggle"></i>
         <ul id="navMenu" class="nav-menu authed">
             <div class="badge">
@@ -49,7 +49,7 @@
         <div class="nav-drawer-category">
             <p>Menu</p>
             <ul>
-                <li class="selected"><a href="/beginner/dashboard.html">Dashboard</a></li>
+                <li><a href="/beginner/dashboard.html">Dashboard</a></li>
                 <li><a href="/view-listings.html">Listings</a></li>
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li><a href="/beginner/favourites.html">Favourites</a></li>
