Added '/beginner/my-reviews.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/view-listing-unit-occupied.html
+++ b/BeginnersPad v2/beginner/view-listing-unit-occupied.html
@@ -144,7 +144,7 @@
                             </div>
                             <div class="item">
                                 <!-- <a href="#"><button class="btn-primary">Review listing</button></a> -->
-                                <button class="btn-primary">Review listing</button>
+                                <a href="/beginner/view-my-review.html"><button class="btn-primary">Review listing</button></a>
                             </div>
                         </div>
                     </div>
