Changed link reference '/beginner/my-tickets.html' to '/view-tickets-user.html' in all '/beginner/*' files in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/favourites.html
+++ b/BeginnersPad v2/beginner/favourites.html
@@ -54,7 +54,7 @@
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li class="selected"><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
-                <li><a href="/beginner/my-tickets.html">My tickets</a></li>
+                <li><a href="/view-tickets-user.html">My tickets</a></li>
             </ul>
         </div>
         <div class="nav-drawer-category">
