--- a/BeginnersPad v2/beginner/my-reviews.html
+++ b/BeginnersPad v2/beginner/my-reviews.html
@@ -51,10 +51,10 @@
             <ul>
                 <li><a href="/beginner/dashboard.html">Dashboard</a></li>
                 <li><a href="/view-listings.html">Listings</a></li>
-                <li><a href="/beginner/my-reviews.html">My reviews</a></li>
+                <li class="selected"><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
-                <li><a href="/beginner/my-tickets.html">My tickets</a></li>
+                <li><a href="/view-tickets-user.html">My tickets</a></li>
             </ul>
         </div>
         <div class="nav-drawer-category">
@@ -82,7 +82,7 @@
                         <h3 class="occupant">Verified occupant</h3>
                         <p class="reveiw">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci officiis unde amet nobis consectetur velit, eius
                         quaerat! Adipisci non alias expedita suscipit!</p>
-                        <a class="link" href="#">Manage <i class="fas fa-chevron-right"></i></a>
+                        <a class="link" href="/beginner/view-my-review.html">Manage <i class="fas fa-chevron-right"></i></a>
                     </div>
                     
                     <div class="review-item">
@@ -97,7 +97,7 @@
                         <h3 class="occupant">Verified occupant</h3>
                         <p class="reveiw">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci officiis unde amet nobis consectetur velit, eius
                         quaerat! Adipisci non alias expedita suscipit!</p>
-                        <a class="link" href="#">Manage <i class="fas fa-chevron-right"></i></a>
+                        <a class="link" href="/beginner/view-my-review.html">Manage <i class="fas fa-chevron-right"></i></a>
                     </div>
                     
                     <div class="review-item">
@@ -119,7 +119,7 @@
                         dolores quidem distinctio ipsam adipisci laborum ut? Quae omnis cupiditate illum iusto nesciunt itaque excepturi optio
                         sed, in ratione odit quasi pariatur architecto vero, placeat laboriosam illo sit non! Architecto officia recusandae
                         veniam atque ipsum.</p>
-                        <a class="link" href="#">Manage <i class="fas fa-chevron-right"></i></a>
+                        <a class="link" href="/beginner/view-my-review.html">Manage <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
