Added styling for '.badge' and '.badge-mark' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -23,11 +23,11 @@
                 <li><a href="/help.html"><i class="fas fa-question-circle"></i> Help</a></li>
             </div>
             <div class="badge">
-                <span class="badge-mark"></span>
+                <span class="badge-mark">1</span>
                 <li><a href="#"><i class="fas fa-user-circle"></i> Account</a></li>
             </div>
             <div class="badge" id="navDrawerOpen">
-                <span class="badge-mark"></span>
+                <span class="badge-mark">3</span>
                 <li><i class="fas fa-bars"></i></li>
             </div>
         </ul>
