Added '.dash-nav' to '/beginner/dashboard.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -66,6 +66,18 @@
     </div>
 
     <section class="section-dash">
+        <!-- Dashboard navbar -->
+        <div class="dash-nav">
+            <ul>
+                <li><a href="#dashProfile">Profile</a></li>
+                <li><a href="#dashProfile">Listings</a></li>
+                <li><a href="#dashProfile">Tickets</a></li>
+                <li><a href="#dashProfile">Reviews</a></li>
+                <li><a href="#dashProfile">Favourites</a></li>
+                <li><a href="#dashProfile">Waiting list</a></li>
+            </ul>
+        </div>
+
         <div class="container">
             <div class="dash-grp profile" id="dashProfile">
                 <h5 class="grp-label">Profile</h5>
