Added '.dash-nav' styling in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -70,11 +70,11 @@
         <div class="dash-nav">
             <ul>
                 <li><a href="#dashProfile">Profile</a></li>
-                <li><a href="#dashProfile">Listings</a></li>
-                <li><a href="#dashProfile">Tickets</a></li>
-                <li><a href="#dashProfile">Reviews</a></li>
-                <li><a href="#dashProfile">Favourites</a></li>
-                <li><a href="#dashProfile">Waiting list</a></li>
+                <li><a href="#dashListings">Listings</a></li>
+                <li><a href="#dashTickets">Tickets</a></li>
+                <li><a href="#dashReviews">Reviews</a></li>
+                <li><a href="#dashFavourites">Favourites</a></li>
+                <li><a href="#dashWaitingList">Waiting list</a></li>
             </ul>
         </div>
 
@@ -193,7 +193,7 @@
                     <div class="chart" id="cahrtDashBeginnerFavs"></div>
                 </div>
             </div>
-            <div class="dash-grp" id="dashFavourites">
+            <div class="dash-grp" id="dashWaitingList">
                 <h5 class="grp-label">Waiting list</h5>
                 <p class="grp-text">Your waiting list subscription status: <span class="status">inactive</span></p>
                 <p class="grp-text">Total waiting list subscription time: <span class="time">0 days</span></p>
