Added styling for '.dash-grp .profile' in '/beginner/dashboard.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -79,23 +79,27 @@
         </div>
 
         <div class="container">
-            <div class="dash-grp profile" id="dashProfile">
+            <div class="dash-grp" id="dashProfile">
                 <h5 class="grp-label">Profile</h5>
-                <div class="profile-1">
-                    <img src="../images/avatar.png" alt="">
-                    <p>Welcome to your dashboard, <span>username</span>!</p>
-                </div>
-                <div class="profile-2">
-                    <p>Your basic info:</p>
-                    <ul>
-                        <li>Name: <span class="name">Firstname Lastname</span></li>
-                        <li>Email address: <span class="name">user@name.com</span></li>
-                        <li>Type: <span class="name">beginner</span></li>
-                        <li>Phone number: <span class="name">0700000000</span></li>
-                    </ul>
-                    <a href="#">Edit details</a>
-                    <button class="btn-link">Share your account <i class="fas fa-share-alt"></i></button>
-                </div>
+                    <div class="profile">
+                        <div class="profile-1">
+                            <img src="../images/avatar.png" alt="">
+                            <p>Welcome to your dashboard, <span>username</span>!</p>
+                        </div>
+                        <div class="profile-2">
+                            <p>Your basic info:</p>
+                            <ul>
+                                <li>Name: <span class="name">Firstname Lastname</span></li>
+                                <li>Email address: <span class="name">user@name.com</span></li>
+                                <li>Type: <span class="name">beginner</span></li>
+                                <li>Phone number: <span class="name">0700000000</span></li>
+                            </ul>
+                            <div>
+                                <a class="edit" href="#">Edit basic info <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                            <button class="btn-link share">Share your account <i class="fas fa-share-alt"></i></button>
+                        </div>
+                    </div>
             </div>
             <div class="dash-grp" id="dashListings">
                 <h5 class="grp-label">Listings</h5>
