Added styling for '.dash-grp .items' and '.dash-grp .txt-items' in '/beginner/dashboard.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -194,13 +194,18 @@
                     </div>
                 </div>
                 <div class="charts">
-                    <div class="chart" id="cahrtDashBeginnerFavs"></div>
+                    <div class="chart" id="chartDashBeginnerFavs"></div>
                 </div>
             </div>
             <div class="dash-grp" id="dashWaitingList">
                 <h5 class="grp-label">Waiting list</h5>
-                <p class="grp-text">Your waiting list subscription status: <span class="status">inactive</span></p>
-                <p class="grp-text">Total waiting list subscription time: <span class="time">0 days</span></p>
+                <div class="txt-items">
+                    <p class="grp-text">Your waiting list subscription status: <span class="status">inactive</span></p>
+                    <p class="grp-text">Total waiting list subscription time: <span class="time">0 days</span></p>
+                    <div>
+                        <a class="edit" href="waiting-list.html">Go to waiting list <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
