--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -210,6 +210,7 @@
         </div>
     </section>
     
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="../js/nav-drawer.js"></script>
     <script src="../js/css-base.js"></script>
 </body>
