--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -105,7 +105,7 @@
                 <h5 class="grp-label">Listings</h5>
                 <div class="items">
                     <div class="item card item-primary">
-                        <p>Listings occupied</p>
+                        <p>Listings Occupied</p>
                         <h4>0</h4>
                     </div>
                     <div class="item card item-tertiary">
@@ -126,9 +126,7 @@
                     </div>
                 </div>
                 <div class="charts">
-                    <div class="chart">
-                        <canvas id="chartDashListingsBeginner" width="250" height="300"></canvas>
-                    </div>
+                    <div class="chart" id="chartDashListingsBeginner"></div>
                 </div>
             </div>
             <div class="dash-grp" id="dashTickets">
