Added more logic to 'charts.js' for chart styling in '/beginner/dashboard.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -105,7 +105,7 @@
                 <h5 class="grp-label">Listings</h5>
                 <div class="items">
                     <div class="item card item-primary">
-                        <p>Listings Occupied</p>
+                        <p>Listings occupied</p>
                         <h4>0</h4>
                     </div>
                     <div class="item card item-tertiary">
@@ -126,7 +126,9 @@
                     </div>
                 </div>
                 <div class="charts">
-                    <div class="chart" id="chartDashListingsBeginner"></div>
+                    <div class="chart">
+                        <canvas id="chartDashListingsBeginner" width="250" height="300"></canvas>
+                    </div>
                 </div>
             </div>
             <div class="dash-grp" id="dashTickets">
@@ -154,7 +156,9 @@
                     </div>
                 </div>
                 <div class="charts">
-                    <div class="chart" id="chartDashTicketsBeginner"></div>
+                    <div class="chart">
+                        <canvas id="chartDashTicketsBeginner" width="250" height="300"></canvas>
+                    </div>
                 </div>
             </div>
             <div class="dash-grp" id="dashReviews">
@@ -174,7 +178,9 @@
                     </div>
                 </div>
                 <div class="charts">
-                    <div class="chart" id="chartDashReviewsBeginner"></div>
+                    <div class="chart">
+                        <canvas id="chartDashReviewsBeginner" width="250" height="300"></canvas>
+                    </div>
                 </div>
             </div>
             <div class="dash-grp" id="dashFavourites">
@@ -189,12 +195,14 @@
                         <h4>0</h4>
                     </div>
                     <div class="item card item-tertiary">
-                        <p>Articles</p>
+                        <p>Topics</p>
                         <h4>0</h4>
                     </div>
                 </div>
                 <div class="charts">
-                    <div class="chart" id="chartDashBeginnerFavs"></div>
+                    <div class="chart">
+                        <canvas id="chartDashBeginnerFavs" width="250" height="300"></canvas>
+                    </div>
                 </div>
             </div>
             <div class="dash-grp" id="dashWaitingList">
