Fixed bug affecting '.filler' that prevented closing of '.nav-drawer' when clicked in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/property-history.html
+++ b/BeginnersPad v2/beginner/property-history.html
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="listing-units-grp">
                 <div class="card-sm card-unit">
-                    <a href="/view-listing-unit.html">
+                    <a href="view-listing-unit-pending.html">
                         <div class="details">
                             <h2>Unit title</h2>
                             <div class="specs">
@@ -108,7 +108,7 @@
                 </div>
                 
                 <div class="card-sm card-unit">
-                    <a href="/view-listing-unit.html">
+                    <a href="view-listing-unit-occupied.html">
                         <div class="details">
                             <h2>Unit title</h2>
                             <div class="specs">
