--- a/BeginnersPad v2/beginner/view-listing-unit-occupied.html
+++ b/BeginnersPad v2/beginner/view-listing-unit-occupied.html
@@ -33,6 +33,9 @@
         </ul>
     </nav>
 
+    <!-- Filler -->
+    <div id="pageFiller"></div>
+
     <!-- Nav drawer -->
     <div class="nav-drawer closed" id="navDrawer">
         <i id="navDrawerClose" class="fas fa-times fa-2x"></i>
