--- a/BeginnersPad v2/lister/dashboard.html
+++ b/BeginnersPad v2/lister/dashboard.html
@@ -41,26 +41,21 @@
         <i id="navDrawerClose" class="fas fa-times fa-2x"></i>
         <div class="nav-drawer-category">
             <ul>
-                <li><a href="../help.html"><i class="fas fa-question-circle"></i> Help</li>
+                <li><a href="/help.html"><i class="fas fa-question-circle"></i> Help</li>
                 <li><a href="#"><i class="fas fa-user-circle"></i> Manage account</a></li>
-                <li><a href="../sign-in.html"><i class="fas fa-sign-out-alt"></i> Sign out</a></li>
+                <li><a href="/sign-in.html"><i class="fas fa-sign-out-alt"></i> Sign out</a></li>
             </ul>
         </div>
         <div class="nav-drawer-category">
             <p>Menu</p>
             <ul>
-                <li class="selected"><a href="/beginner/dashboard.html">Dashboard</a></li>
+                <li class="selected"><a href="/lister/dashboard.html">Dashboard</a></li>
                 <li><a href="/view-listings.html">Listings</a></li>
-                <li><a href="/beginner/my-reviews.html">My reviews</a></li>
-                <li><a href="/beginner/favourites.html">Favourites</a></li>
-                <li><a href="/beginner/property-history.html">Property history</a></li>
+                <li><a href="/lister/my-listings.html">My listings</a></li>
+                <li><a href="/lister/favourites.html">Favourites</a></li>
+                <li><a href="/lister/beginner-applications.html">Beginner applications</a></li>
+                <li><a href="/lister/property-applications.html">My listing applications</a></li>
                 <li><a href="/view-tickets-user.html">My tickets</a></li>
-            </ul>
-        </div>
-        <div class="nav-drawer-category">
-            <p>Premium</p>
-            <ul>
-                <li><a href="/beginner/waiting-list.html">Waiting list <i class="fas fa-star"></i></a></li>
             </ul>
         </div>
     </div>
